--- a/index.html
+++ b/index.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>O Meu Site de Jogos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nexus Gaming Platform</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Bem-vindo ao Meu Site!</h1>
-    <p>Este é o site da nossa plataforma de jogos. Em breve, mais novidades!</p>
+
+    <header>
+        <nav>
+            <div class="logo">NEXUS</div>
+            <ul>
+                <li><a href="#" class="active">Início</a></li>
+                <li><a href="#">Loja</a></li>
+                <li><a href="#">Biblioteca</a></li>
+                <li><a href="#">Comunidade</a></li>
+            </ul>
+            <div class="profile">
+                <span>FudzeAltF4</span>
+                <img src="https://i.pravatar.cc/40?u=fudze" alt="Avatar">
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h2>Cyber Revolt 2088</h2>
+                <p>A rebelião começou. Lute pelo futuro em uma cidade neon distópica. Já disponível na sua biblioteca.</p>
+                <a href="#" class="btn">Jogar Agora</a>
+            </div>
+        </section>
+
+        <section class="game-library">
+            <h2>Sua Biblioteca</h2>
+            <div class="game-grid">
+                <!-- Jogo 1 -->
+                <div class="game-card">
+                    <img src="https://via.placeholder.com/300x400/9932CC/FFFFFF?text=AstroClash" alt="Capa do Jogo AstroClash">
+                    <div class="card-content">
+                        <h3>AstroClash</h3>
+                        <a href="#" class="btn-play">Jogar</a>
+                    </div>
+                </div>
+                <!-- Jogo 2 -->
+                <div class="game-card">
+                    <img src="https://via.placeholder.com/300x400/FF4500/FFFFFF?text=Forge+of+Empires" alt="Capa do Jogo Forge of Empires">
+                    <div class="card-content">
+                        <h3>Forge of Empires</h3>
+                        <a href="#" class="btn-play">Jogar</a>
+                    </div>
+                </div>
+                <!-- Jogo 3 -->
+                <div class="game-card">
+                    <img src="https://via.placeholder.com/300x400/20B2AA/FFFFFF?text=Shadow+Runner" alt="Capa do Jogo Shadow Runner">
+                    <div class="card-content">
+                        <h3>Shadow Runner</h3>
+                        <a href="#" class="btn-play">Jogar</a>
+                    </div>
+                </div>
+                <!-- Jogo 4 -->
+                <div class="game-card">
+                    <img src="https://via.placeholder.com/300x400/4682B4/FFFFFF?text=Void+Odyssey" alt="Capa do Jogo Void Odyssey">
+                    <div class="card-content">
+                        <h3>Void Odyssey</h3>
+                        <a href="#" class="btn-play">Instalar</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
