--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
             <div class="logo">NEXUS</div>
             <ul>
-                <li><a href="#" class="active">Início</a></li>
-                <li><a href="#">Loja</a></li>
-                <li><a href="#">Biblioteca</a></li>
-                <li><a href="#">Comunidade</a></li>
+                 <li><a href="index.html" class="active">Início</a></li>
+                 <li><a href="loja.html">Loja</a></li>
+                 <li><a href="biblioteca.html">Biblioteca</a></li>
+                 <li><a href="comunidade.html">Comunidade</a></li>
             </ul>
             <div class="profile">
                 <span>FudzeAltF4</span>
