--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus Gaming Platform</title>
+    <title>NextSession Gaming Platform</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
 
     <header>
         <nav>
-            <div class="logo">NEXUS</div>
+            <div class="logo">NextSession</div>
             <ul>
                  <li><a href="index.html" class="active">Início</a></li>
                  <li><a href="loja.html">Loja</a></li>
@@ -28,9 +28,8 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h2>Cyber Revolt 2088</h2>
-                <p>A rebelião começou. Lute pelo futuro em uma cidade neon distópica. Já disponível na sua biblioteca.</p>
-                <a href="#" class="btn">Jogar Agora</a>
+                <h2>Minesweaper</h2>
+                <a href="#" class="btn">Jogar</a>
             </div>
         </section>
 
@@ -41,7 +40,7 @@
                 <div class="game-card">
                     <img src="https://via.placeholder.com/300x400/9932CC/FFFFFF?text=AstroClash" alt="Capa do Jogo AstroClash">
                     <div class="card-content">
-                        <h3>AstroClash</h3>
+                        <h3>Jogo do Galo</h3>
                         <a href="#" class="btn-play">Jogar</a>
                     </div>
                 </div>
@@ -49,7 +48,7 @@
                 <div class="game-card">
                     <img src="https://via.placeholder.com/300x400/FF4500/FFFFFF?text=Forge+of+Empires" alt="Capa do Jogo Forge of Empires">
                     <div class="card-content">
-                        <h3>Forge of Empires</h3>
+                        <h3>Pedra Papel Tesoura</h3>
                         <a href="#" class="btn-play">Jogar</a>
                     </div>
                 </div>
@@ -57,7 +56,7 @@
                 <div class="game-card">
                     <img src="https://via.placeholder.com/300x400/20B2AA/FFFFFF?text=Shadow+Runner" alt="Capa do Jogo Shadow Runner">
                     <div class="card-content">
-                        <h3>Shadow Runner</h3>
+                        <h3>Snake</h3>
                         <a href="#" class="btn-play">Jogar</a>
                     </div>
                 </div>
@@ -65,7 +64,7 @@
                 <div class="game-card">
                     <img src="https://via.placeholder.com/300x400/4682B4/FFFFFF?text=Void+Odyssey" alt="Capa do Jogo Void Odyssey">
                     <div class="card-content">
-                        <h3>Void Odyssey</h3>
+                        <h3>Geometry Dash</h3>
                         <a href="#" class="btn-play">Instalar</a>
                     </div>
                 </div>
