--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <img src="https://via.placeholder.com/300x400/9932CC/FFFFFF?text=AstroClash" alt="Capa do Jogo AstroClash">
                     <div class="card-content">
                         <h3>Jogo do Galo</h3>
-                        <a href="#" class="btn-play">Jogar</a>
+                        <a href="jogo_da_velha.html" class="btn-play">Jogar</a>
                     </div>
                 </div>
                 <!-- Jogo 2 -->
