jogo_da_velha.html

--- a/jogo_da_velha.html
+++ b/jogo_da_velha.html
@@ -41,6 +41,6 @@
         <button id="restart-button">Recomeçar</button>
     </main>
 
-    <script src="game.js"></script>
+    <script src="jogo_da_velha.js"></script>
 </body>
 </html>
